--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,9 @@ android {
         exclude 'META-INF/NOTICE'
     }
 }
-    repositories {
-        maven { url 'https://jitpack.io' }
-    }
+repositories {
+    maven { url 'https://jitpack.io' }
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -41,6 +41,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
 
 }
 apply plugin: 'com.google.gms.google-services'
